tests/rosetta/transpiler/OCaml/constrained-genericity-3.error
exit status 2
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/constrained-genericity-3.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "Constrained-genericity-3" is not a valid module name.
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/constrained-genericity-3.ml", line 55, characters 2-5:
55 |   let finish = _now () in
       ^^^
Error: Syntax error
